--- a/package.json
+++ b/package.json
@@ -73,11 +73,16 @@
 		]
 	},
 	"dependencies": {
+		"@fortawesome/fontawesome-svg-core": "^6.2.0",
+		"@fortawesome/free-solid-svg-icons": "^6.2.0",
+		"@fortawesome/react-fontawesome": "^0.2.0",
+		"babel-plugin-macros": "^3.1.0",
 		"bootstrap": "^5.2.0",
 		"prop-types": "^15.6.1",
 		"react": "^16.8.4",
 		"react-bootstrap": "^2.5.0",
 		"react-dom": "^16.8.4",
+		"react-icons": "^4.4.0",
 		"react-polyfills": "0.0.1",
 		"react-router-dom": "^6.3.0"
 	}
