--- a/package.json
+++ b/package.json
@@ -76,13 +76,15 @@
 		"@fortawesome/fontawesome-svg-core": "^6.2.0",
 		"@fortawesome/free-solid-svg-icons": "^6.2.0",
 		"@fortawesome/react-fontawesome": "^0.2.0",
+		"@react-icons/all-files": "^4.1.0",
 		"babel-plugin-macros": "^3.1.0",
 		"bootstrap": "^5.2.1",
 		"prop-types": "^15.6.1",
 		"react": "^16.8.4",
 		"react-bootstrap": "^2.5.0",
 		"react-dom": "^16.8.4",
-		"react-icons": "^4.4.0",
+		"react-icons": "^4.6.0",
+		"react-multi-carousel": "^2.8.2",
 		"react-polyfills": "0.0.1",
 		"react-router-dom": "^6.3.0"
 	}
