--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
 		"react": "^16.8.4",
 		"react-bootstrap": "^2.5.0",
 		"react-dom": "^16.8.4",
+		"react-hover-image": "^2.0.1",
 		"react-icons": "^4.6.0",
 		"react-multi-carousel": "^2.8.2",
 		"react-polyfills": "0.0.1",
